--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!doctype html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Assignment solution Module3 </title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/Style.css">
+</head>
+
+<body>
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+                <a class="navbar-brand" href="#">Food,LLC</a>
+            </div>
+            <div id="navbar-collapse-1" class="collapse navbar-collapse">
+                <di class="container-fluid">
+                    <ul id="nav-list" class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="menu-categories.html">
+                                <span class="item 1"></span><br class="visible-xs"> Chicken</a>
+                        </li>
+                        <li>
+                            <a href="menu-categories.html">
+                                <span class="item 2"></span><br class="visible-xs"> Beef</a>
+                        </li>
+                        <li>
+                            <a href="menu-categories.html">
+                                <span class="item 3"></span><br class="visible-xs"> Sushi</a>
+                        </li>
+                    </ul>
+            </div>
+        </div>
+        <div id="main-content" class="container-fluid">
+            <h1> Our Menu </h1>
+            <div id="home-tiles" class="row">
+                <div class="col-xs-12">
+                    <div id="items">
+                        <p1>Chicken</p1>
+                        <p>Fried chicken, also known as Southern fried chicken is a dish consisting of chicken pieces that have been coated with seasoned flour or batter and pan-fried, deep fried, pressure fried, or air fried. </p>
+                    </div>
+
+                </div>
+                <div class="col-xs-12">
+                    <div id="items">
+                        <p1>Beef</p1>
+                        <p>Beef Fried Rice recipe includes tender strips of sirloin, vegetables, eggs, crisp rice, and a rich, full-flavored sauce.</p>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div id="items">
+                        <p1>Sushi</p1>
+                        <p>Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanied by a variety of ingredients, such as seafood, often raw, and vegetables. </p>
+                    </div>
+
+                </div>
+                </a>
+            </div>
+        </div>
+
+        </div>
+
+</body>
+
+</html>
